@@ -3,9 +3,6 @@ package id.ac.ui.cs.advprog.everest.modules.coupon.repository;
 import id.ac.ui.cs.advprog.everest.modules.coupon.model.Coupon;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
-import org.springframework.test.context.ActiveProfiles;
 
 import java.time.LocalDate;
 import java.util.List;
@@ -14,22 +11,18 @@ import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-@DataJpaTest
-@ActiveProfiles("test")
 class CouponRepositoryTest {
 
-    @Autowired
     private CouponRepository couponRepository;
-
     private UUID couponId;
     private Coupon sampleCoupon;
 
     @BeforeEach
     void setUp() {
-        // Clear repository before each test
-        couponRepository.deleteAll();
+        couponRepository = new CouponRepository();
 
         // Create sample coupon for testing
+        couponId = UUID.randomUUID();
         sampleCoupon = Coupon.builder()
                 .code("TEST50")
                 .discountAmount(50000)
@@ -37,6 +30,7 @@ class CouponRepositoryTest {
                 .usageCount(0)
                 .validUntil(LocalDate.now().plusDays(30))
                 .build();
+        sampleCoupon.setId(couponId);
     }
 
     @Test
@@ -54,11 +48,9 @@ class CouponRepositoryTest {
 
     @Test
     void testFindById() {
-        // Save first to get the generated ID
-        Coupon savedCoupon = couponRepository.save(sampleCoupon);
-        UUID savedId = savedCoupon.getId();
+        couponRepository.save(sampleCoupon);
 
-        Optional<Coupon> foundCoupon = couponRepository.findById(savedId);
+        Optional<Coupon> foundCoupon = couponRepository.findById(couponId);
 
         assertTrue(foundCoupon.isPresent());
         assertEquals(sampleCoupon.getCode(), foundCoupon.get().getCode());
@@ -73,14 +65,13 @@ class CouponRepositoryTest {
 
     @Test
     void testUpdateExistingCoupon() {
-        // Save first to get the generated ID
-        Coupon savedCoupon = couponRepository.save(sampleCoupon);
+        couponRepository.save(sampleCoupon);
 
         // Update the coupon
-        savedCoupon.setDiscountAmount(75000);
-        savedCoupon.setMaxUsage(200);
+        sampleCoupon.setDiscountAmount(75000);
+        sampleCoupon.setMaxUsage(200);
 
-        Coupon updatedCoupon = couponRepository.save(savedCoupon);
+        Coupon updatedCoupon = couponRepository.save(sampleCoupon);
 
         assertEquals(75000, updatedCoupon.getDiscountAmount());
         assertEquals(200, updatedCoupon.getMaxUsage());
@@ -92,16 +83,14 @@ class CouponRepositoryTest {
 
     @Test
     void testDeleteById() {
-        // Save first to get the generated ID
-        Coupon savedCoupon = couponRepository.save(sampleCoupon);
-        UUID savedId = savedCoupon.getId();
+        couponRepository.save(sampleCoupon);
 
-        couponRepository.deleteById(savedId);
+        couponRepository.deleteById(couponId);
 
         List<Coupon> allCoupons = couponRepository.findAll();
         assertEquals(0, allCoupons.size());
 
-        Optional<Coupon> foundCoupon = couponRepository.findById(savedId);
+        Optional<Coupon> foundCoupon = couponRepository.findById(couponId);
         assertFalse(foundCoupon.isPresent());
     }
 
@@ -118,7 +107,7 @@ class CouponRepositoryTest {
                 .usageCount(0)
                 .validUntil(LocalDate.now().minusDays(1))
                 .build();
-
+        expiredCoupon.setId(UUID.randomUUID());
         couponRepository.save(expiredCoupon);
 
         List<Coupon> validCoupons = couponRepository.findByValidUntilAfter(LocalDate.now());
@@ -137,16 +126,16 @@ class CouponRepositoryTest {
                 .code("USED")
                 .discountAmount(30000)
                 .maxUsage(50)
-                .usageCount(50)
+                .usageCount(50)  // Max usage reached
                 .validUntil(LocalDate.now().plusDays(30))
                 .build();
-
+        usedCoupon.setId(UUID.randomUUID());
         couponRepository.save(usedCoupon);
 
         List<Coupon> availableCoupons = couponRepository.findByUsageCountLessThanMaxUsage();
 
         assertEquals(1, availableCoupons.size());
-        assertEquals("TEST50", availableCoupons.get(0).getCode());
+        assertEquals("TEST50", availableCoupons.getFirst().getCode());
     }
 
     @Test
